--- a/.github/workflows/docker-build-push.yml
+++ b/.github/workflows/docker-build-push.yml
@@ -5,7 +5,7 @@ on:
   push:
     branches: [ alexandrit ]
     paths:
-      - 'Task3/services/**'
+      - 'task3/services/**'
       - '.github/workflows/docker-build-push.yml'
   release:
     types: [published]
@@ -62,7 +62,7 @@ jobs:
       - name: Build and push Service-A Docker image
         uses: docker/build-push-action@v4
         with:
-          context: ./Task3/services/service-a
+          context: ./task3/services/service-a
           push: true
           tags: ${{ steps.meta-service-a.outputs.tags }}
           labels: ${{ steps.meta-service-a.outputs.labels }}
@@ -85,7 +85,7 @@ jobs:
       - name: Build and push Service-B Docker image
         uses: docker/build-push-action@v4
         with:
-          context: ./Task3/services/service-b
+          context: ./task3/services/service-b
           push: true
           tags: ${{ steps.meta-service-b.outputs.tags }}
           labels: ${{ steps.meta-service-b.outputs.labels }}
