Task31 tracing jaeger ready

--- a/task3/k8s/services.yaml
+++ b/task3/k8s/services.yaml
@@ -18,6 +18,7 @@ spec:
           imagePullPolicy: IfNotPresent
           ports:
             - containerPort: 8080
+      restartPolicy: Always     
 ---
 apiVersion: v1
 kind: Service
@@ -51,11 +52,12 @@ spec:
           imagePullPolicy: IfNotPresent
           ports:
             - containerPort: 8080
+      restartPolicy: Always         
 ---
 apiVersion: v1
 kind: Service
 metadata:
-  name: service-b
+  name: service-b 
 spec:
   selector:
     app: service-b
