--- a/task3/services/service-a/Dockerfile
+++ b/task3/services/service-a/Dockerfile
@@ -1,31 +1,7 @@
-FROM golang:1.25.5-alpine AS builder
-
-WORKDIR /app
-
-# Copy go mod and sum files
-COPY go.mod ./
-
-# Download all dependencies
-RUN go mod download
-
-# Copy the source code
-COPY . .
-
-# Build the application
-RUN CGO_ENABLED=0 GOOS=linux go build -a -installsuffix cgo -o service-a .
-
-# Use a smaller image for the final application
-FROM alpine:latest  
-
-RUN apk --no-cache add ca-certificates
-
-WORKDIR /root/
-
-# Copy the binary from builder
-COPY --from=builder /app/service-a .
-
-# Expose the application port
+FROM python:3.12
+COPY app.py requirements.txt /
+RUN apt-get update && apt-get install -y g++ 
+RUN /usr/local/bin/python -m pip install --upgrade pip
+RUN pip install -r requirements.txt
 EXPOSE 8080
-
-# Command to run the executable
-CMD ["./service-a"]
+CMD ["flask", "run", "-h", "0.0.0.0", "-p", "8080"] 
